--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "prettier": "^3.1.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "json-web-token": "^3.2.0",
+    "mongoose": "^8.0.3",
+    "mongoose-aggregate-paginate-v2": "^1.0.7"
   }
 }
